[gd_scene load_steps=5 format=3 uid="uid://106bjfe7jhy2"]

[ext_resource type="Theme" uid="uid://cmbo3c7rnoun7" path="res://assets/theme.tres" id="1_51ktm"]
[ext_resource type="Script" path="res://scenes/user_settings.gd" id="1_fr42r"]
[ext_resource type="Texture2D" uid="uid://m3vbiomqc2pe" path="res://assets/Images/Snakes/blue_preview.png" id="2_vihr5"]
[ext_resource type="PackedScene" uid="uid://bdcc0njvy50mt" path="res://scenes/labeled_h_slider.tscn" id="3_d0h0d"]

[node name="UserSettings" type="Panel"]
offset_right = 1252.0
offset_bottom = 880.0
theme = ExtResource("1_51ktm")
script = ExtResource("1_fr42r")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="VFlowContainer" type="VFlowContainer" parent="ScrollContainer"]
custom_minimum_size = Vector2(313, 322)
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 25
theme_override_constants/v_separation = 25
alignment = 1

[node name="PlayerName_L" type="Label" parent="ScrollContainer/VFlowContainer"]
layout_mode = 2
tooltip_text = "this will be displayed
to the other players"
mouse_filter = 1
text = "Playername"
horizontal_alignment = 1

[node name="PlayerName" type="LineEdit" parent="ScrollContainer/VFlowContainer"]
layout_mode = 2
alignment = 1
max_length = 20

[node name="HSeparator" type="HSeparator" parent="ScrollContainer/VFlowContainer"]
layout_mode = 2

[node name="Snake_L" type="Label" parent="ScrollContainer/VFlowContainer"]
layout_mode = 2
text = "Snake"
horizontal_alignment = 1

[node name="SnakeOpt" type="OptionButton" parent="ScrollContainer/VFlowContainer"]
layout_mode = 2
icon_alignment = 1
expand_icon = true
selected = 0
item_count = 1
popup/item_0/text = " "
popup/item_0/icon = ExtResource("2_vihr5")

[node name="HSeparator2" type="HSeparator" parent="ScrollContainer/VFlowContainer"]
layout_mode = 2

[node name="Input_L" type="Label" parent="ScrollContainer/VFlowContainer"]
layout_mode = 2
tooltip_text = "relative: only two keys/buttons are used to change the direction of movement to the left/right
absolute: four keys/buttons are used for up/down/left/right"
mouse_filter = 1
text = "Input"
horizontal_alignment = 1

[node name="InputOpt" type="OptionButton" parent="ScrollContainer/VFlowContainer"]
layout_mode = 2
alignment = 1
selected = 0
item_count = 2
popup/item_0/text = "relativ"
popup/item_1/text = "absolute"
popup/item_1/id = 1

[node name="HSeparator3" type="HSeparator" parent="ScrollContainer/VFlowContainer"]
layout_mode = 2

[node name="SmoothCam_L" type="Label" parent="ScrollContainer/VFlowContainer"]
layout_mode = 2
text = "Smooth camera: true"
horizontal_alignment = 1

[node name="SmoothCam" type="Button" parent="ScrollContainer/VFlowContainer"]
layout_mode = 2
toggle_mode = true
text = "disable"

[node name="HSeparator4" type="HSeparator" parent="ScrollContainer/VFlowContainer"]
layout_mode = 2

[node name="VSyncL" type="Label" parent="ScrollContainer/VFlowContainer"]
layout_mode = 2
tooltip_text = "https://docs.godotengine.org/en/stable
classes/class_displayserver.html#enum
displayserver-vsyncmode"
mouse_filter = 1
text = "V-Sync mode"
horizontal_alignment = 1

[node name="VSyncB" type="OptionButton" parent="ScrollContainer/VFlowContainer"]
layout_mode = 2
selected = 1
item_count = 4
popup/item_0/text = "enabled"
popup/item_1/text = "disabled"
popup/item_1/id = 1
popup/item_2/text = "adaptive"
popup/item_2/id = 2
popup/item_3/text = "mailbox"
popup/item_3/id = 3

[node name="HSeparator5" type="HSeparator" parent="ScrollContainer/VFlowContainer"]
layout_mode = 2

[node name="SplitScreenL" type="Label" parent="ScrollContainer/VFlowContainer"]
layout_mode = 2
tooltip_text = "controls the window layout:
for left top, right top, left bottom, right
bottom the Window is floating on top of
other windows"
mouse_filter = 1
text = "Splitscreen"
horizontal_alignment = 1

[node name="SplitScreenOpt" type="OptionButton" parent="ScrollContainer/VFlowContainer"]
layout_mode = 2
selected = 0
item_count = 6
popup/item_0/text = "Fullscreen"
popup/item_1/text = "Left top"
popup/item_1/id = 1
popup/item_2/text = "Right top"
popup/item_2/id = 2
popup/item_3/text = "Left bottom"
popup/item_3/id = 3
popup/item_4/text = "Right bottom"
popup/item_4/id = 4
popup/item_5/text = "Windowed"
popup/item_5/id = 5

[node name="HSeparator6" type="HSeparator" parent="ScrollContainer/VFlowContainer"]
layout_mode = 2

[node name="MusicL" type="Label" parent="ScrollContainer/VFlowContainer"]
layout_mode = 2
text = "Music volume"
horizontal_alignment = 1

[node name="MusicVolume" parent="ScrollContainer/VFlowContainer" instance=ExtResource("3_d0h0d")]
layout_mode = 2
value = 100.0

[node name="HSeparator7" type="HSeparator" parent="ScrollContainer/VFlowContainer"]
layout_mode = 2

[node name="Shader" type="CheckButton" parent="ScrollContainer/VFlowContainer"]
layout_mode = 2
button_pressed = true
text = "Use shader"

[node name="HSeparator8" type="HSeparator" parent="ScrollContainer/VFlowContainer"]
layout_mode = 2

[node name="Particles" type="CheckButton" parent="ScrollContainer/VFlowContainer"]
layout_mode = 2
button_pressed = true
text = "Use particles"

[node name="HSeparator10" type="HSeparator" parent="ScrollContainer/VFlowContainer"]
layout_mode = 2

[node name="CaptureReplay" type="CheckButton" parent="ScrollContainer/VFlowContainer"]
layout_mode = 2
tooltip_text = "if enabled the current game is recorded and
can be viewed using the \"watch replay\"
button in the main menu"
button_pressed = true
text = "Capture replay"

[node name="HSeparator9" type="HSeparator" parent="ScrollContainer/VFlowContainer"]
layout_mode = 2

[node name="MultiMainScreen" type="CheckButton" parent="ScrollContainer/VFlowContainer"]
layout_mode = 2
tooltip_text = "if enabled, this window will try to diplay all
players. This should be used for local
multiplayer in fullscreen mode."
text = "Main multi-
player screen"

[node name="HSeparator11" type="HSeparator" parent="ScrollContainer/VFlowContainer"]
layout_mode = 2

[node name="ConsolPrio_L" type="Label" parent="ScrollContainer/VFlowContainer"]
layout_mode = 2
text = "Console print prio"
horizontal_alignment = 1

[node name="ConsolPrio" parent="ScrollContainer/VFlowContainer" instance=ExtResource("3_d0h0d")]
layout_mode = 2
value = 35.0

[node name="HSeparator12" type="HSeparator" parent="ScrollContainer/VFlowContainer"]
layout_mode = 2

[node name="ToastPrio_L" type="Label" parent="ScrollContainer/VFlowContainer"]
layout_mode = 2
text = "Toast print prio"
horizontal_alignment = 1

[node name="ToastPrio" parent="ScrollContainer/VFlowContainer" instance=ExtResource("3_d0h0d")]
layout_mode = 2
value = 50.0

[connection signal="focus_exited" from="ScrollContainer/VFlowContainer/PlayerName" to="." method="_on_player_name_focus_exited"]
[connection signal="text_submitted" from="ScrollContainer/VFlowContainer/PlayerName" to="." method="_on_player_name_text_submitted"]
[connection signal="item_selected" from="ScrollContainer/VFlowContainer/SnakeOpt" to="." method="_on_snake_opt_item_selected"]
[connection signal="item_selected" from="ScrollContainer/VFlowContainer/InputOpt" to="." method="_on_input_opt_item_selected"]
[connection signal="toggled" from="ScrollContainer/VFlowContainer/SmoothCam" to="." method="_on_smooth_cam_toggled"]
[connection signal="item_selected" from="ScrollContainer/VFlowContainer/VSyncB" to="." method="_on_v_sync_b_item_selected"]
[connection signal="item_selected" from="ScrollContainer/VFlowContainer/SplitScreenOpt" to="." method="_on_split_screen_opt_item_selected"]
[connection signal="drag_ended" from="ScrollContainer/VFlowContainer/MusicVolume" to="." method="_on_music_volume_drag_ended"]
[connection signal="toggled" from="ScrollContainer/VFlowContainer/Shader" to="." method="_on_shader_toggled"]
[connection signal="toggled" from="ScrollContainer/VFlowContainer/Particles" to="." method="_on_particles_toggled"]
[connection signal="toggled" from="ScrollContainer/VFlowContainer/CaptureReplay" to="." method="_on_capture_replay_toggled"]
[connection signal="toggled" from="ScrollContainer/VFlowContainer/MultiMainScreen" to="." method="_on_multi_main_screen_toggled"]
[connection signal="drag_ended" from="ScrollContainer/VFlowContainer/ConsolPrio" to="." method="_on_consol_prio_drag_ended"]
[connection signal="drag_ended" from="ScrollContainer/VFlowContainer/ToastPrio" to="." method="_on_toast_prio_drag_ended"]
